<?xml version="1.0" encoding="UTF-8"?>
<!--

  Copyright (c) [2017-2021] Payara Foundation and/or its affiliates. All rights reserved.

  The contents of this file are subject to the terms of either the GNU
  General Public License Version 2 only ("GPL") or the Common Development
  and Distribution License("CDDL") (collectively, the "License").  You
  may not use this file except in compliance with the License.  You can
  obtain a copy of the License at
  https://github.com/payara/Payara/blob/master/LICENSE.txt
  See the License for the specific
  language governing permissions and limitations under the License.

  When distributing the software, include this License Header Notice in each
  file and include the License file at glassfish/legal/LICENSE.txt.

  GPL Classpath Exception:
  The Payara Foundation designates this particular file as subject to the "Classpath"
  exception as provided by the Payara Foundation in the GPL Version 2 section of the License
  file that accompanied this code.

  Modifications:
  If applicable, add the following below the License Header, with the fields
  enclosed by brackets [] replaced by your own identifying information:
  "Portions Copyright [year] [name of copyright owner]"

  Contributor(s):
  If you wish your version of this file to be governed by only the CDDL or
  only the GPL Version 2, indicate your decision by adding "[Contributor]
  elects to include this software in this distribution under the [CDDL or GPL
  Version 2] license."  If you don't indicate a single choice of license, a
  recipient has the option to distribute your version of this file under
  either the CDDL, the GPL Version 2 or to extend the choice of license to
  its licensees as provided above.  However, if you add GPL Version 2 code
  and therefore, elected the GPL Version 2 license, then the option applies
  only if the new code is made subject to such option by the copyright
  holder.


  This file incorporates work covered by the following copyright and
  permission notice:

  JBoss, Home of Professional Open Source
  Copyright 2011, Red Hat Middleware LLC, and individual contributors
  by the @authors tag. See the copyright.txt in the distribution for a
  full listing of individual contributors.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

-->
<!-- Portions Copyright [2023, 2025] [OmniFish and/or its affiliates] -->
<!-- Portions Copyright [2021, 2022] [OmniFaces and/or its affiliates] -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ee.omnifish.arquillian</groupId>
    <artifactId>glassfish-containers-main</artifactId>
    <version>2.1.2</version>
    <packaging>pom</packaging>

    <name>Arquillian Container for GlassFish - Main POM</name>

    <description>
        GlassFish Container integrations for the Arquillian Project.
        Based on the JBoss GlassFish container integrations.
        Based on the Payara container integrations.
    </description>

    <url>https://github.com/OmniFish-EE/arquillian-container-glassfish</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <docs.phase>deploy</docs.phase>
        <deployAtEnd>true</deployAtEnd>

        <version.arquillian>1.10.0.Final</version.arquillian>
        <version.glassfish>7.0.25</version.glassfish>
        <version.gjule>${version.glassfish}</version.gjule>
        <version.jakartaee>10</version.jakartaee>
        <version.jakartaee.api>10.0.0</version.jakartaee.api>
        <version.jackson>2.19.2</version.jackson>
        <version.shrinkwrap>1.2.6</version.shrinkwrap>
        <glassfish.home>glassfish7</glassfish.home>

        <test.logManager>org.glassfish.main.jul.GlassFishLogManager</test.logManager>
        <test.logLevel>INFO</test.logLevel>
        <test.enableDefaultLogCfg>true</test.enableDefaultLogCfg>
        <maven.test.jvmoptions.add-opens>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED</maven.test.jvmoptions.add-opens>
        <maven.test.jvmoptions>${maven.test.jvmoptions.add-opens}</maven.test.jvmoptions>
        <surefire.argLine>${maven.test.jvmoptions}</surefire.argLine>
        <failsafe.argLine>${maven.test.jvmoptions}</failsafe.argLine>
    </properties>

    <developers>
        <developer>
            <name>OmniFish Team</name>
            <organization>OmniFish</organization>
            <organizationUrl>https://omnifish.ee</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:OmniFish-EE/arquillian-container-glassfish.git</connection>
        <url>scm:git:git@github.com:OmniFish-EE/arquillian-container-glassfish.git</url>
        <developerConnection>scm:git:git@github.com:OmniFish-EE/arquillian-container-glassfish.git</developerConnection>
        <tag>2.1.0</tag>
    </scm>

    <licenses>
        <license>
            <name>CDDL + GPLv2 with classpath exception</name>
            <url>http://glassfish.java.net/nonav/public/CDDL+GPL.html</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <modules>
        <module>dependencies</module>
        <module>glassfish-common</module>
        <module>glassfish-managed</module>
        <module>glassfish-remote</module>
        <module>glassfish-embedded</module>
        <module>glassfish-client-ee10</module>
        <module>glassfish-client-ee11</module>
        <module>integration-tests</module>
        <module>docs</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.platform</groupId>
                <artifactId>jakarta.jakartaee-api</artifactId>
                <version>${version.jakartaee.api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
                <version>${version.jackson}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${version.jackson}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.jboss.arquillian.junit5</groupId>
                <artifactId>arquillian-junit5-container</artifactId>
                <version>${version.arquillian}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.glassfish.main</groupId>
                <artifactId>glassfish-jul-extension</artifactId>
                <version>${version.gjule}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>3.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.13.4</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.shrinkwrap</groupId>
                <artifactId>shrinkwrap-api</artifactId>
                <version>${version.shrinkwrap}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.9.0</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Configure the jar with the binaries. -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <forceCreation>true</forceCreation>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <URL>${project.url}</URL>
                            <Extension-Name>${project.artifactId}</Extension-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>

            <!-- Configure the jar with the sources. -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>${docs.phase}</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Configure the jar with the javadoc. -->
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <notimestamp>true</notimestamp>
                    <splitindex>true</splitindex>
                    <doctitle>Arquillian connector</doctitle>
                    <links>
                        <link>https://jakarta.ee/specifications/platform/${version.jakartaee}/apidocs/</link>
                    </links>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>${docs.phase}</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>11</release>
                        <compilerArgument>-Xlint:unchecked</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>${test.logManager}</java.util.logging.manager>
                            <java.util.logging.config.useDefaults>${test.enableDefaultLogCfg}</java.util.logging.config.useDefaults>
                            <java.util.logging.config.defaultLevel>${test.logLevel}</java.util.logging.config.defaultLevel>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>${test.logManager}</java.util.logging.manager>
                            <java.util.logging.config.useDefaults>${test.enableDefaultLogCfg}</java.util.logging.config.useDefaults>
                            <java.util.logging.config.defaultLevel>${test.logLevel}</java.util.logging.config.defaultLevel>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-invoker-plugin</artifactId>
                    <version>3.9.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.cyclonedx</groupId>
                    <artifactId>cyclonedx-maven-plugin</artifactId>
                    <version>2.9.1</version>
                    <executions>
                        <execution>
                            <phase>disabled</phase>
                            <goals>
                                <goal>makeAggregateBom</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.8</version>
                </plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.1.1</version>
                    <configuration>
                        <lineSeparator>lf</lineSeparator>
                        <autoResolveSnapshots>true</autoResolveSnapshots>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <pushChanges>false</pushChanges>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                    <configuration>
                        <deployAtEnd>true</deployAtEnd>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.8.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <deploymentName>GlassFish Containers ${project.version}</deploymentName>
                        <publishingServerId>central</publishingServerId>
                        <excludeArtifacts>integration-tests</excludeArtifacts>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <!-- Deployment of all modules: mvn clean deploy -Prelease -->
    <profiles>
        <profile>
            <id>release</id>
            <properties>
                <docs.phase>package</docs.phase>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.cyclonedx</groupId>
                        <artifactId>cyclonedx-maven-plugin</artifactId>
                        <configuration>
                            <!-- We don't use deploy plugin and it doesn't detect other' -->
                            <skipNotDeployed>false</skipNotDeployed>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>makeAggregateBom</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Signing with GPG is a requirement for a release deployment to Maven central. -->
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>glassfish8</id>
            <properties>
                <version.glassfish>8.0.0-M12</version.glassfish>
                <version.gjule>8.0.0-M12</version.gjule>
                <version.jakartaee>11</version.jakartaee>
                <glassfish.home>glassfish8</glassfish.home>
            </properties>
        </profile>

        <profile>
            <id>skipTests</id>
            <activation>
                <property>
                    <name>skipTests</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <maven.test.skip>true</maven.test.skip>
                <skipITs>true</skipITs>
            </properties>
        </profile>
    </profiles>
</project>
